- support params argument in low level db utilities
Backward incompatible changes:
- fetch_row() and fetch_val() will now return None when no rows or cols returned

0.1.7
- added do_sql() and fetch_*() db utilities
- added get_or_none()
- fixed @ajax.catch() behaviour

0.1.6
- added javascript revivers
- fixed datetime handling in @ajax-ed views
- fixed requirements (Yuri Shikanov)

0.1.5
- JSONTextarea for JSONField
- pass through HttpResonse under @render_to_json() and @ajax
- added some data utils
- fixed unicode bug in StringArrayField